--- a/sass/_vars.scss
+++ b/sass/_vars.scss
@@ -42,4 +42,5 @@ $backgroundChecked: radial-gradient(rgb(255, 145, 0) 0%, rgb(255, 145, 0) 40%, t
 $mobilexs: 360px;
 $mobile: 576px;
 $tablet: 820px;
+$tabla: 940px;
 $desktop: 1400px;
