--- a/sass/_galerias.scss
+++ b/sass/_galerias.scss
@@ -12,7 +12,7 @@
     display: grid;
     width: 100%;
     padding: 2rem;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     gap: 1rem 2rem;
     text-align: center;
     justify-content: center;
