--- a/sass/_quienes.scss
+++ b/sass/_quienes.scss
@@ -1,7 +1,7 @@
 /* ------------------------ ¿Quienes Somos? ------------------------ */
 
 .quienes {
-  margin: 0 auto;
+  margin: 2rem auto;
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
