--- a/sass/_tablas.scss
+++ b/sass/_tablas.scss
@@ -35,6 +35,9 @@
       width: 100%;
       height: auto;
       margin: 1rem;
+      img{
+      filter: grayscale(1);
+    }
     }
 
     table {
