--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -1,118 +1,123 @@
 /* ------------------------ Contacto ------------------------ */
+.container_datos_contacto {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
 
-.datos {
-  width: 30rem;
-  height: 100%;
-  margin: 1rem 2rem;
-  border-radius: 1rem;
-  padding: 1rem;
-  background: map-get($map: $colores_fondo , $key: contacto);
+  .datos {
+    width: 25rem;
+    height: 100%;
+    margin: 1rem 2rem;
+    border-radius: 1rem;
+    padding: 1rem;
+    background: map-get($map: $colores_fondo, $key: contacto);
 
-  h2 {
-    font-size: 2rem;
-    text-align: left;
-    color: $colorTxPrincipal;
+    h2 {
+      font-size: 2rem;
+      text-align: left;
+      color: $colorTxPrincipal;
+    }
+
+    h3 {
+      padding-top: 1rem;
+      padding-bottom: 0;
+      color: $colorTxForm;
+      font-size: 1rem;
+      text-decoration: underline;
+    }
+
+    p {
+      color: $colorTxPrincipal;
+      font-size: 1.0rem;
+      transition: all 1s;
+    }
+
+    a {
+      color: $colorTxPrincipal;
+      font-size: 1rem;
+      transition: all 1s;
+      text-decoration: none;
+
+      &:hover {
+        color: $colorTxAzul;
+      }
+    }
+
+    .bi-whatsapp {
+      color: $colorWA;
+      transition: all 1s;
+
+      &:hover {
+        color: $colorWAH;
+      }
+    }
+
+    .ubicacion {
+      padding: 1rem 0;
+      width: 100%;
+
+      #gmap_canvas {
+        width: 23rem;
+        height: 24rem;
+        padding-top: 1rem;
+      }
+    }
   }
 
-  h3 {
-    padding-top: 1rem;
-    padding-bottom: 0;
-    color: $colorTxForm;
-    font-size: 1rem;
-    text-decoration: underline;
-  }
+  .contacto {
+    max-width: 25rem;
+    height: auto;
+    margin: 1rem 2rem;
+    border-radius: 10px;
+    padding: 1rem;
+    background-color: $colorContacto;
 
-  p {
-    color: $colorTxPrincipal;
-    font-size: 1.0rem;
-    transition: all 1s;
-  }
+    h2 {
+      font-size: 32px;
+      text-align: left;
+      padding-bottom: 20px;
+      color: $colorTxPrincipal;
+    }
 
-  a {
-    color: $colorTxPrincipal;
-    font-size: 1.3rem;
-    transition: all 1s;
-    text-decoration: none;
+    h3 {
+      font-size: 16px;
+      padding-bottom: 30px;
+      color: $colorTxForm;
+    }
 
-    &:hover {
+    p {
+      font-size: 14px;
+      color: $colorTxForm;
+    }
+
+    label {
+      display: block;
+    }
+
+    .aviso {
+      font-size: 1rem;
       color: $colorTxAzul;
     }
-  }
-  .bi-whatsapp {
-    color: $colorWA;
-    transition: all 1s;
-  
-    &:hover {
-      color: $colorWAH;
+
+    input {
+      @include formarea (1rem, 1.5rem)
     }
-  }
-  .ubicacion {
-    padding-top: 1rem;
-    padding-bottom: 1rem;
-    width: 100%;
-    #gmap_canvas {
-      width: 28rem;
-      height: 30rem;
-      padding-top: 1rem;
+
+    textarea {
+      @include formarea (15rem, 1rem);
+
+    }
+
+    .advertencia {
+      background: $colorFondQS;
+      border-radius: 5px;
+      text-align: center;
+      text-transform: uppercase;
+
+    }
+
+    .btn_send2 {
+      @include btn($colorTxSecundario, $colorTxPrincipal)
     }
   }
 }
-
-.contacto {
-  width: 30rem;
-  height: auto;
-  margin: 1rem 2rem;
-  border-radius: 10px;
-  padding: 20px 20px 20px 20px;
-  background-color: $colorContacto;
-  padding-left: 30px;
-  h2 {
-    font-size: 32px;
-    text-align: left;
-    padding-bottom: 20px;
-    color: $colorTxPrincipal;
-  }
-
-  h3 {
-    font-size: 16px;
-    padding-bottom: 30px;
-    color: $colorTxForm;
-  }
-
-  p {
-    font-size: 14px;
-    color: $colorTxForm;
-  }
-
-  label {
-    display: block;
-  }
-  
-  .aviso {
-    font-size: 1rem;
-    color: $colorTxAzul;
-  }
-
-  input {
-    @include formarea (1rem, 1.5rem)
-  }
-
-  textarea {
-    @include formarea (15rem, 1rem);
-    
-  }
-  .advertencia {
-    background: $colorFondQS;
-    border-radius: 5px;
-    text-align: center;
-    text-transform: uppercase;
-   
-  }
-  .btn_send2 {
-    @include btn($colorTxSecundario, $colorTxPrincipal)
-  }
-}
-
-
-
-
