--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -6,7 +6,7 @@
 
   .datos {
     width: 25rem;
-    height: 100%;
+    height: auto;
     margin: 1rem 2rem;
     border-radius: 1rem;
     padding: 1rem;
@@ -65,12 +65,12 @@
   }
 
   .contacto {
-    max-width: 25rem;
+    width: 25rem;
     height: auto;
     margin: 1rem 2rem;
-    border-radius: 10px;
+    border-radius: 1rem;
     padding: 1rem;
-    background-color: $colorContacto;
+    background: map-get($map: $colores_fondo, $key: contacto);
 
     h2 {
       font-size: 32px;
