--- a/sass/_mediaQueries.scss
+++ b/sass/_mediaQueries.scss
@@ -108,6 +108,7 @@
     }
   }
 }
+
 @media screen and (max-width: $mobile) {
   .galeria {
     &__container {
@@ -180,7 +181,7 @@
   .container_datos_contacto {
 
     .datos {
-      margin: 1rem;
+      margin: 1rem 0;
 
       a {
         font-size: 1.2rem;
@@ -198,7 +199,7 @@
     }
 
     .contacto {
-      margin: 1rem;
+      margin: 1rem 0;
 
       input,
       textarea {
