--- a/sass/_contacto.scss
+++ b/sass/_contacto.scss
@@ -6,7 +6,7 @@
 
   .datos {
     width: 25rem;
-    height: auto;
+    height: 100%;
     margin: 1rem 2rem;
     border-radius: 1rem;
     padding: 1rem;
